[project]
name = "dnd-campaign-map-api"
version = "0.1.0"
description = "Self-hosted FastAPI backend for a D&D campaign map UI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1.0",
    "pydantic-settings>=2.2,<3.0",
    "uvicorn[standard]>=0.29,<1.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

